Fixed odd right aligned page text
- the hard-coded “* static script edited” was conflicting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- / / / / / / / / / / / / / / /    Notes    / / / / / / / / / / / / / / / / /
 
 *** Next ***
-- make page2.js (change to setPage()?)
+- make page2.js
 - endpoints
 - multi server="data.a data.b[0]"
 - visit HELPFUL LINK-5: I think there needs to be some major refactoring with how we build using a separate class so we can use ONLY the webcomonents poly
