--- a/index.html
+++ b/index.html
@@ -43,14 +43,8 @@
   - ... create another component like data=Obj. but page=Obj, to fire when page changed
   - ... you'll have to give it to all of them, but this will make it easy to plug into
   - ... and be automatic.
-- clean up/think of more clear way to include page settting
-  - ... you have two ways now...
-  - ... think of a way you can pull it off by grabbing all tags by attr. like change
-  - ... name="landing" to pagename, or something similar to grab all of, then sort by
-  - ... actual tage name....? THEN, give body attributes with matching pagelables and
-  - ... equal the landing....?
+- can/should page handling be done inside class?
 - make page2.js
-- endpoints
 - multi server="data.a data.b[0]"
 - visit HELPFUL LINK-5: I think there needs to be some major refactoring with how we build using a separate class so we can use ONLY the webcomonents poly
 - Clean -> vars  lets  const (warning! there are some odd places where It just doesn't like arrow-funcs, note out that it's perposful!)
