--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <h2> page2 goes here... </h2>
       <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
       <pageTwo pageName="p2">p2 two</pageTwo>
-      <pageTwo pageName="p3">p2 three</pageTwo>
     </navPage>
     <navPage pageName="data">
       <h2> data page goes here... </h2>
@@ -33,34 +32,10 @@
 </body>
 </html>
 
-<!-- / / / / / / / / / / / / / / /    Notes    / / / / / / / / / / / / / / / / /
-
-*** Next ***
-- remove useless argument passed for pageSet(group, name). don't we catch name in function now?
-- page2/data need to change navbar's page2/data color when clicked...
-  - ... create another component like data=Obj. but page=Obj, to fire when page changed
-  - ... you'll have to give it to all of them, but this will make it easy to plug into
-  - ... and be automatic.
-- when you click the "back" arrow on browser, it should go to the last page you were on...
-- can/should page handling be done inside class?
-- multi server="data.a data.b[0]"
-- visit HELPFUL LINK-5: I think there needs to be some major refactoring with how we build using a separate class so we can use ONLY the webcomonents poly
-- Clean -> vars  lets  const (warning! there are some odd places where It just doesn't like arrow-funcs, note out that it's perposful!)
-- MERGE notes and all into loneJS/loneJS-toolkit (settle all ideas to build out with repo-control with emily/others...)
-- create new branch for merging this with html.js
-
-PAGE2
-- update website name (easy)
-- removed landing page edit (easy)
-
-Login Page
-- complete new page (background and all)
-- included lifeless LOGIN username / Password / create account button
-- add previous page global var.
-- included X to go back to PREVIOUS PAGE, not landing.
-
-FOOTER
-- create a footer for example of hosting the NON-Component code that's in the navbar (no serve)
+<!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / /
+// page attribute is created! now implement into components
+// ... and fire reset attribute on pageSet()
+// I don't see hold anywhere...? (in pageSet...) may have mad it useless.
 
 -->
 
@@ -71,6 +46,7 @@ FOOTER
 - IF other the main .html file isn't index.html, just add the endpoint of the file
 - Like: http://localhost:8080/template.html
 - ALSO, you can >>> http-server -c-1 -p 8010    (will change port to 8010. Somtimes there's  confict for some reason)
+- ALSO, you can >>> http-server -c-1 -o         (will auto open a new browser)
 - ALSO, you may need to >>> sudo kill -9 PID    (If port has conflict (>>> top    (to find out PID))
 - HELPFUL LINK: *** https://www.html5rocks.com/en/tutorials/webcomponents/imports/
 - HELPFUL LINK2: https://www.html5rocks.com/en/tutorials/webcomponents/customelements/
