--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / /
 // page attribute is created! now implement into components
 // ... and fire reset attribute on pageSet()
+
 // I don't see hold anywhere...? (in pageSet...) may have mad it useless.
+// c.onload is firing twice! looks like i patched it in the past but isn't taking n e more.
 
 -->
 
