pages are pluged into updated status, needs to be looked at closer though...
- figure out funky 2x navbar.html issue, … like is there an issue?

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <page pageName="home" activePage='true'>
     <navbar-tag serve="data.arr[0]"></navbar-tag>
-    <!-- <navbar-tag serve="data.arr[1]"></navbar-tag> -->
+    <navbar-tag serve="data.arr[1]"></navbar-tag>
     <navPage pageName="landing" activePage='true'>
       <landing-tag serve="data"></landing-tag>
     </navPage>
@@ -33,11 +33,6 @@
 </html>
 
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / /
-// page attribute is created! now implement into components
-// ... and fire reset attribute on pageSet()
-
-// I don't see hold anywhere...? (in pageSet...) may have mad it useless.
-// c.onload is firing twice! looks like i patched it in the past but isn't taking n e more.
 
 -->
 
