removed blank page holders

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <landing-tag serve="data"></landing-tag>
     </navPage>
     <navPage pageName="page2">
-      <h2> page2 goes here... </h2>
+      <!-- <h2> page2 goes here... </h2> -->
       <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
       <pageTwo pageName="p2">p2 two</pageTwo>
     </navPage>
     <navPage pageName="data">
-      <h2> data page goes here... </h2>
+      <!-- <h2> data page goes here... </h2> -->
     </navPage>
   </page>
 
