--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
   <page pageName="home" activePage='true'>
     <navbar-tag serve="data.arr[0]"></navbar-tag>
     <navbar-tag serve="data.arr[1]"></navbar-tag>
+    <navbar-tag serve="data.arr[2]"></navbar-tag>
+
     <navPage pageName="landing" activePage='true'>
       <landing-tag serve="data"></landing-tag>
     </navPage>
     <navPage pageName="page2">
-      <!-- <h2> page2 goes here... </h2> -->
+      <h2> page2 goes here... </h2>
       <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
       <pageTwo pageName="p2">p2 two</pageTwo>
     </navPage>
     <navPage pageName="data">
-      <!-- <h2> data page goes here... </h2> -->
+      <h2> data page goes here... </h2>
+    </navPage>
+    <navPage pageName="about">
+      <h2> About page goes here... </h2>
     </navPage>
   </page>
 
