--- a/index.html
+++ b/index.html
@@ -6,33 +6,38 @@
   <link rel="import" href="components/navbar.html">
   <link rel="import" href="components/landing.html">
   <link rel="import" href="components/id-card.html">
+  <link rel="import" href="components/footer.html">
 </head>
 
 <body>
-  <page pageName="home" activePage='true'>
-    <navbar-tag serve="data.arr[0]"></navbar-tag>
-    <navbar-tag serve="data.arr[1]"></navbar-tag>
-    <navbar-tag serve="data.arr[2]"></navbar-tag>
+  <div id='all'>
+    <div id='content'>
+      <page pageName="home" activePage='true'>
+        <navbar-tag serve="data.arr[0]"></navbar-tag>
+        <navbar-tag serve="data.arr[1]"></navbar-tag>
+        <navbar-tag serve="data.arr[2]"></navbar-tag>
+        <navPage pageName="landing" activePage='true'>
+          <landing-tag serve="data"></landing-tag>
+        </navPage>
+        <navPage pageName="page2">
+          <h2> page2 goes here... </h2>
+          <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
+          <pageTwo pageName="p2">p2 two</pageTwo>
+        </navPage>
+        <navPage pageName="data">
+          <h2> data page goes here... </h2>
+        </navPage>
+        <navPage pageName="about">
+          <h2> About page goes here... </h2>
+        </navPage>
+      </page>
+    </div>
+    <footer-tag id='footer'></footer-tag>
+  </div>
 
-    <navPage pageName="landing" activePage='true'>
-      <landing-tag serve="data"></landing-tag>
-    </navPage>
-    <navPage pageName="page2">
-      <h2> page2 goes here... </h2>
-      <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
-      <pageTwo pageName="p2">p2 two</pageTwo>
-    </navPage>
-    <navPage pageName="data">
-      <h2> data page goes here... </h2>
-    </navPage>
-    <navPage pageName="about">
-      <h2> About page goes here... </h2>
-    </navPage>
+  <page pageName="login" class="linen-background"> login page goes here
+    <br><button onclick="goBack()" > back </button>
   </page>
-
-  <page pageName="login"> login page goes here
-    <button onclick="goBack()" > back </button>
-  </page> <br>
 
 </body>
 </html>
