components can now receive multi-serve data separated by space
- Will be placed in array of c.data[0]…

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <page pageName="home" activePage='true'>
-    <navbar-tag serve="data.arr[0]"></navbar-tag>
+    <navbar-tag serve="data.arr[0] data.newC"></navbar-tag>
     <navbar-tag serve="data.arr[1]"></navbar-tag>
     <navbar-tag serve="data.arr[2]"></navbar-tag>
     <navPage pageName="landing" activePage='true'>
