Added Login Component

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="import" href="components/landing.html">
   <link rel="import" href="components/id-card.html">
   <link rel="import" href="components/footer.html">
+  <link rel="import" href="components/login.html">
+
 </head>
 
 <body>
@@ -25,8 +27,8 @@
     <navPage pageName="about"> About page goes here... </navPage>
   </page>
 
-  <page pageName="login" class="linen-background"> login page goes here
-    <br><button onclick="goBack()" > back </button>
+  <page pageName="login" class="linen-background"> 
+    <login-tag></login-tag>
   </page>
 
   <footer-tag></footer-tag>
