made landing page cards non-editable and incorporated html.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </navPage>
     <navPage pageName="data"> Data page goes here... </navPage>
     <navPage pageName="htmlJS">
-      <htmlJS-tag serve="data"></htmlJS-tag>
+      <htmlJS-tag serve="data.arr"></htmlJS-tag>
     </navPage>
   </page>
 
