made components dynamically added. Code NOT clean and notes all over the place
- need to make html work through recursive …

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <pageTwo pageName="p2"> p2 two</pageTwo>
     </navPage>
     <navPage pageName="data">
-      <data-tag serve="data"/><data-tag>
+      <data-tag serve="data"></data-tag>
     </navPage>
     <navPage pageName="htmlJS">
       <htmlJS-tag serve="data.arr"></htmlJS-tag>
