--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <navPage pageName="landing" activePage='true'>
       <landing-tag serve="data"></landing-tag>
     </navPage>
-    <navPage pageName="page2"> Page2 goes here... <br>
+    <navPage pageName="page2" > <h1>Page2 goes here... </h1> <br>
       <pageTwo pageName="p1" activePage='true'>p2 One</pageTwo>
       <pageTwo pageName="p2"> p2 two</pageTwo>
+      <p> maybe average age and height? \n ... make seperate entries for ft/in</p>
     </navPage>
     <navPage pageName="data">
       <data-tag serve="data"></data-tag>
