--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <page pageName="home" activePage='true'>
     <navbar-tag serve="data.arr[0] data.newC"></navbar-tag>
-    <!-- <navbar-tag serve="data.arr[1]"></navbar-tag>
-    <navbar-tag serve="data.arr[2]"></navbar-tag> -->
+    <navbar-tag serve="data.arr[1]"></navbar-tag>
+    <navbar-tag serve="data.arr[2]"></navbar-tag>
     <navPage pageName="landing" activePage='true'>
       <landing-tag serve="data"></landing-tag>
     </navPage>
