--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title> Components </title>
   <script type="text/javascript" src="loneJS-lib/component.js"></script>
-  <script type="text/javascript" src="loneJS-lib/html.js"></script>
-  <script type="text/javascript" src="data.js"></script>
-
   <link rel="stylesheet" href="main.css">
+
   <!-- COMPONENTS -->
   <link rel="import" href="components/navbar.html">
   <link rel="import" href="components/landing.html">
@@ -60,13 +58,25 @@
 //
 // ** JS Vars
 // - data
-// -
+// -  oldHash
+// - componentsStoredGlobally
+// - polyFillIncluded
+//
+// ** JS Funcs
+// - pageSet
+// - pageDisplay
+// - updateComponents
+// - goBack
+//
+// ** JS Class
+// - HtmlJS
+// - Component
+//
 // ** Naming Conventions
-// Component html tags: <mycomponent-tag>
-//  - ALL lowercase. ALWAYS end with -tag
-// pages: <SPECIALp>
-//  - ALL capitals. ALWAYS end with p
-
+// - html tags for components: <mycomponent-tag>
+//  - - ALL lowercase. ALWAYS end with -tag
+// - pages: <SPECIALp>
+//  - - ALL capitals. ALWAYS end with p
 
 -->
 
