--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <data-tag serve="data"></data-tag>
     </NAVp>
     <NAVp pageName="htmlJS">
-      <htmlJS-tag serve="data.arr"></htmlJS-tag>
+      <!-- <htmlJS-tag serve="data.arr"></htmlJS-tag> -->
     </NAVp>
   </MAINp>
 
