--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
+  <MAINp pageName="home" activePage='true'>
+    <example-component-tag serve="_DATA.home"></example-component-tag>
+  </MAINp>
 
-  <example-component-tag serve="_DATA"></example-component-tag>
-  
+  <MAINp pageName="page2">
+    <example-component-tag serve="_DATA.page2"></example-component-tag>
+  </MAINp>
+
 </body>
 
 </html>
