--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title> ! TITLE ! </title>
-  <script type="text/javascript" src="loneJS-lib/component.js"></script>
-  <link rel="stylesheet" href="main.css">
-
-  <!-- COMPONENTS -->
-  <link rel="import" href="components/example-component.html">
-
-</head>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Run Tracker</title>
+		<script type="text/javascript" src="loneJS-lib/component.js"></script>
+		<link rel="stylesheet" href="main.css">
+		<!-- COMPONENTS -->
+		<link rel="import" href="components/navbar.html">
+		<link rel="import" href="components/route-maps.html">
+		<link rel="import" href="components/example-component.html">
+	</head>
 
 <body>
-  <MAINp pageName="home" activePage='true'>
-    <example-component-tag serve="_DATA.home"></example-component-tag>
-  </MAINp>
-
-  <MAINp pageName="page2">
-    <example-component-tag serve="_DATA.page2"></example-component-tag>
-  </MAINp>
-
+	<navbar-tag></navbar-tag>
+	<MAINp pageName="home" activePage='true'>
+		<example-component-tag serve="_DATA.home"></example-component-tag>
+		<hr>
+		<example-component-tag serve="_DATA.page2"></example-component-tag>
+	</MAINp>
+	<MAINp pageName="route-maps">
+		<route-maps-tag serve="_DATA"></route-maps-tag>
+	</MAINp>
 </body>
 
 </html>
