--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Run Tracker</title>
-		<script type="text/javascript" src="loneJS-lib/component.js"></script>
-		<link rel="stylesheet" href="main.css">
-		<!-- COMPONENTS -->
-		<link rel="import" href="components/navbar.html">
-		<link rel="import" href="components/route-maps.html">
-		<link rel="import" href="components/example-component.html">
-	</head>
-
-<body>
-	<navbar-tag></navbar-tag>
-	<MAINp pageName="home" activePage='true'>
-		<example-component-tag serve="_DATA.home"></example-component-tag>
-		<example-component-tag serve="_DATA.page2"></example-component-tag>
-	</MAINp>
-	<MAINp pageName="route-maps">
-		<route-maps-tag serve="_DATA"></route-maps-tag>
-	</MAINp>
-</body>
-
-</html>
+	<html>
+		<head>
+				<meta charset="utf-8">
+				<title>Run Tracker</title>
+	  			<script type="text/javascript" src="loneJS-lib/component.js"></script>
+	  			<script type="text/javascript" src="loneJS-lib/html.js"></script>
+	 			 <script type="text/javascript" src="loneJS-lib/pages.js"></script>
+	  			<script type="text/javascript" src="loneJS-lib/polyfills.js"></script>
+	  			<script type="text/javascript" src="../data.js"></script>
+				<link rel="stylesheet" href="main.css">
+				<!-- COMPONENTS -->
+				<link rel="import" href="components/navbar.html">
+				<link rel="import" href="components/route-maps.html">
+				<link rel="import" href="components/example-component.html">
+		</head>
+		<body>
+			<navbar-tag></navbar-tag>
+			<MAINp pageName="home" activePage='true'>
+				<example-component-tag serve="_DATA.home"></example-component-tag>
+				<example-component-tag serve="_DATA.page2"></example-component-tag>
+			</MAINp>
+			<MAINp pageName="route-maps">
+				<route-maps-tag serve="_DATA"></route-maps-tag>
+			</MAINp>
+		</body>
+	</html>
 
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / /
 
