--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  		<script type="text/javascript" src="loneJS-lib/html.js"></script>
 	 		<script type="text/javascript" src="loneJS-lib/pages.js"></script>
 	  		<script type="text/javascript" src="loneJS-lib/polyfills.js"></script>
-	  		<script type="text/javascript" src="../data.js"></script>
+	  		<script type="text/javascript" src="data.js"></script>
 			<script type="text/javascript" src="canvas.js"></script>
 			<!-- COMPONENTS -->
 			<link rel="import" href="components/graph.html">
