adding get request for myjason files and putting data on the front-end

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<body>
 			<navbar-tag></navbar-tag>
 			<MAINp pageName="home" activePage='true'>
-				<navigation-cards-tag serve="_DATA"></navigation-cards-tag>
+				<navigation-cards-tag serve="_DATA.runs"></navigation-cards-tag>
 			</MAINp>
-			<MAINp pageName="graph">
+			<!--<MAINp pageName="graph">
 				<graph-loop-tag serve="_DATA"></graph-loop-tag>
 			</MAINp>
 			<MAINp pageName="run-data">
@@ -31,6 +31,6 @@
 			</MAINp>
 			<MAINp pageName="route-maps">
 				<route-maps-tag serve="_DATA"></route-maps-tag>
-			</MAINp>
+			</MAINp> -->
 		</body>
 	</html>
