editing lonejs code to correct some data issues

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 			<MAINp pageName="home" activePage='true'>
 				<navigation-cards-tag serve="_DATA.runs"></navigation-cards-tag>
 			</MAINp>
-			<!--<MAINp pageName="graph">
-				<graph-loop-tag serve="_DATA"></graph-loop-tag>
+			<MAINp pageName="graph">
+				<graph-loop-tag serve="_DATA.runs"></graph-loop-tag>
 			</MAINp>
 			<MAINp pageName="run-data">
-				<run-data-tag serve="_DATA"></run-data-tag>
+				<run-data-tag serve="_DATA.runs"></run-data-tag>
 			</MAINp>
 			<MAINp pageName="route-maps">
-				<route-maps-tag serve="_DATA"></route-maps-tag>
-			</MAINp> -->
+				<route-maps-tag serve="_DATA.runs"></route-maps-tag>
+			</MAINp>
 		</body>
 	</html>
