--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
 	  		<script type="text/javascript" src="loneJS-lib/polyfills.js"></script>
 	  		<script type="text/javascript" src="data.js"></script>
 			<script type="text/javascript" src="canvas.js"></script>
+			<script src='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.js'></script>
 			<!-- COMPONENTS -->
-			<link rel="import" href="components/graph.html">
+			<!-- <link rel="import" href="components/graph.html"> -->
 			<link rel="import" href="components/navbar.html">
+			<link rel="import" href="components/mapbox.html">
 			<link rel="import" href="components/run-data.html">
 			<link rel="import" href="components/graph-loop.html">
 			<link rel="import" href="components/route-maps.html">
 			<link rel="import" href="components/navigation-cards.html">
 			<link rel="stylesheet" href="main.css">
+			<link href='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet' />
 		</head>
 		<body>
 			<navbar-tag></navbar-tag>
 			<MAINp pageName="home" activePage='true'>
 				<navigation-cards-tag serve="_DATA.runs"></navigation-cards-tag>
 			</MAINp>
-			<MAINp pageName="graph">
+			<!-- <MAINp pageName="graph">
 				<graph-loop-tag serve="_DATA.runs"></graph-loop-tag>
-			</MAINp>
-			<MAINp pageName="run-data">
+			</MAINp> -->
+			<!-- <MAINp pageName="run-data">
 				<run-data-tag serve="_DATA.runs"></run-data-tag>
-			</MAINp>
-			<MAINp pageName="route-maps">
-				<route-maps-tag serve="_DATA.runs"></route-maps-tag>
+			</MAINp> -->
+			<MAINp pageName="mapbox">
+				<mapbox-tag serve="_DATA.runs"></mapbox-tag>
 			</MAINp>
 		</body>
 	</html>
