--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			<!-- COMPONENTS -->
 			<!-- <link rel="import" href="components/graph.html"> -->
 			<link rel="import" href="components/navbar.html">
-			<link rel="import" href="components/mapbox.html">
 			<link rel="import" href="components/run-data.html">
 			<link rel="import" href="components/graph-loop.html">
 			<link rel="import" href="components/route-maps.html">
@@ -26,14 +25,14 @@
 			<MAINp pageName="home" activePage='true'>
 				<navigation-cards-tag serve="_DATA.runs"></navigation-cards-tag>
 			</MAINp>
+			<MAINp pageName="route-maps">
+				<route-maps-tag serve="_DATA.runs"></route-maps-tag>
+			</MAINp>
 			<!-- <MAINp pageName="graph">
 				<graph-loop-tag serve="_DATA.runs"></graph-loop-tag>
 			</MAINp> -->
 			<!-- <MAINp pageName="run-data">
 				<run-data-tag serve="_DATA.runs"></run-data-tag>
 			</MAINp> -->
-			<MAINp pageName="mapbox">
-				<mapbox-tag serve="_DATA.runs"></mapbox-tag>
-			</MAINp>
 		</body>
 	</html>
