--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<script type="text/javascript" src="canvas.js"></script>
 			<script src='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.js'></script>
 			<!-- COMPONENTS -->
-			<!-- <link rel="import" href="components/graph.html"> -->
+			<link rel="import" href="components/graph.html">
 			<link rel="import" href="components/navbar.html">
 			<link rel="import" href="components/run-data.html">
 			<link rel="import" href="components/graph-loop.html">
@@ -28,11 +28,11 @@
 			<MAINp pageName="route-maps">
 				<route-maps-tag serve="_DATA.runs"></route-maps-tag>
 			</MAINp>
-			<!-- <MAINp pageName="graph">
+			<MAINp pageName="graph">
 				<graph-loop-tag serve="_DATA.runs"></graph-loop-tag>
-			</MAINp> -->
-			<!-- <MAINp pageName="run-data">
+			</MAINp>
+			<MAINp pageName="run-data">
 				<run-data-tag serve="_DATA.runs"></run-data-tag>
-			</MAINp> -->
+			</MAINp>
 		</body>
 	</html>
